new info from project

--- a/cidr_convert_api/python/sonar-project.properties
+++ b/cidr_convert_api/python/sonar-project.properties
@@ -1,5 +1,12 @@
-sonar.projectKey=codeAnalysis
-sonar.login=admin
-sonar.password=admin
-sonar.sources=/var/lib/jenkins/workspace/SonarQube/cidr_convert_api/python
-sonar.host.url=http://ec2-18-117-184-134.us-east-2.compute.amazonaws.com:9000/
+//sonar.projectKey=codeAnalysis
+//sonar.login=admin
+//sonar.password=admin
+//sonar.sources=/var/lib/jenkins/workspace/SonarQube/cidr_convert_api/python
+//sonar.host.url=http://ec2-18-117-184-134.us-east-2.compute.amazonaws.com:9000/
+
+
+sonar-runner \
+  -Dsonar.projectKey=codeAnalysis \
+  -Dsonar.sources=. \
+  -Dsonar.host.url=http://ec2-18-117-184-134.us-east-2.compute.amazonaws.com:9000 \
+  -Dsonar.login=f73e0ac4d8aaf4fdd588047144df5ce03f04b06c
