--- a/cidr_convert_api/python/sonar-project.properties
+++ b/cidr_convert_api/python/sonar-project.properties
@@ -2,4 +2,4 @@ sonar.projectKey=codeAnalysis
 sonar.login=admin
 sonar.password=admin
 sonar.sources=/var/lib/jenkins/workspace/SonarQube/cidr_convert_api/python
-sonar.host.url=http://http://18.117.184.134:9000/
+sonar.host.url=http://18.117.184.134:9000/
