--- a/cidr_convert_api/python/sonar-project.properties
+++ b/cidr_convert_api/python/sonar-project.properties
@@ -4,3 +4,4 @@ sonar.password=admin
 sonar.sources=/var/lib/jenkins/workspace/SonarQube/cidr_convert_api/python
 sonar.host.url=http://18.117.184.134:9000/
 sonar.language=py
+sonar.coverage.exclusions=Dokerfile, **/*.sh
