--- a/cidr_convert_api/python/sonar-project.properties
+++ b/cidr_convert_api/python/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=codeAnalysis
+sonar.projectBaseDir=/var/lib/jenkins/workspace/Final-Project-Jenkinsfile/cidr_convert_api/python
 sonar.login=admin
 sonar.password=admin
 sonar.sources=/var/lib/jenkins/workspace/SonarQube/cidr_convert_api/python
