--- a/cidr_convert_api/python/sonar-project.properties
+++ b/cidr_convert_api/python/sonar-project.properties
@@ -1,8 +1,8 @@
 sonar.projectKey=codeAnalysis
-sonar.projectBaseDir=/var/lib/jenkins/workspace/Final-Project-Jenkinsfile/cidr_convert_api/python
+sonar.projectBaseDir=/var/lib/jenkins/workspace/Final-Project-Jenkinsfile/cidr_convert_api/
 sonar.login=admin
 sonar.password=admin
-sonar.sources=/var/lib/jenkins/workspace/Final-Project-Jenkinsfile/cidr_convert_api/python
+sonar.sources=python
 sonar.host.url=http://18.117.184.134:9000/
 sonar.language=py
 sonar.coverage.exclusions=Dokerfile, **/*.sh
