Adding unit Tests and Coverage

--- a/cidr_convert_api/python/sonar-project.properties
+++ b/cidr_convert_api/python/sonar-project.properties
@@ -6,3 +6,7 @@ sonar.sources=python
 sonar.host.url=http://18.117.184.134:9000/
 sonar.language=py
 sonar.coverage.exclusions=Dokerfile, **/*.sh
+# Test Results
+sonar.python.xunit.reportPath=services/tests/nosetests.xml
+# Coverage
+sonar.python.coverage.reportPaths=services/tests/coverage.xml
