another commit to py test

--- a/cidr_convert_api/python/pytest.ini
+++ b/cidr_convert_api/python/pytest.ini
@@ -3,4 +3,4 @@
 miversion = 6.0
 junit_family=xunit2
 junit_suite_name= Pytest Tests
-adopts = -ra -q -v -s --junitxml=pytest.xml 
+addopts = -ra -q -v -s --junitxml=pytest.xml 
