--- a/cidr_convert_api/python/sonar-project.properties
+++ b/cidr_convert_api/python/sonar-project.properties
@@ -10,3 +10,4 @@ sonar.coverage.exclusions=Dokerfile, **/*.sh
 sonar.python.xunit.reportPath=services/tests/nosetests.xml
 # Coverage
 sonar.python.coverage.reportPaths=services/tests/coverage.xml
+sonar.python.xunit.reportPath
