--- a/cidr_convert_api/python/sonar-project.properties
+++ b/cidr_convert_api/python/sonar-project.properties
@@ -7,7 +7,8 @@ sonar.host.url=http://18.117.184.134:9000/
 sonar.language=py
 sonar.coverage.exclusions=Dokerfile, **/*.sh
 # Test Results
-sonar.python.xunit.reportPath=services/tests/nosetests.xml
+# sonar.python.xunit.reportPath=services/tests/nosetests.xml
+sonar.python.xunit.reportPath=junit.xml
 # Coverage
 sonar.python.coverage.reportPaths=services/tests/coverage.xml
-sonar.python.xunit.reportPath
+
