--- a/cidr_convert_api/python/sonar-project.properties
+++ b/cidr_convert_api/python/sonar-project.properties
@@ -10,5 +10,5 @@ sonar.coverage.exclusions=Dokerfile, **/*.sh
 # sonar.python.xunit.reportPath=services/tests/nosetests.xml
 sonar.python.xunit.reportPath=junit.xml
 # Coverage
-sonar.python.coverage.reportPaths=services/tests/coverage.xml
+sonar.python.coverage.reportPaths=coverage.xml
 
