--- a/cidr_convert_api/python/Dockerfile
+++ b/cidr_convert_api/python/Dockerfile
@@ -7,5 +7,5 @@ RUN pip install -r requirements.txt
 
 COPY . .
 CMD ["ash", "-c", "python api.py"]
-# docker build -t pym .
-# docker run -ti -p 8000:8000 pym
+docker build -t pym .
+docker run -ti -p 8000:8000 pym
