--- a/cidr_convert_api/python/Dockerfile
+++ b/cidr_convert_api/python/Dockerfile
@@ -4,9 +4,7 @@ WORKDIR /app
 
 COPY requirements.txt .
 
-RUN pip install requirements.txt
-
-#RUN pip install -r requirements.txt
+RUN pip install -r requirements.txt
 
 COPY . .
 CMD ["ash", "-c", "python api.py"]
