--- a/cidr_convert_api/python/Dockerfile
+++ b/cidr_convert_api/python/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3-alpine
 
 WORKDIR /app
 
+RUN pip install flask-restful
+
 COPY requirements.txt .
 
 RUN pip install -r requirements.txt
