--- a/cidr_convert_api/python/sonar-project.properties
+++ b/cidr_convert_api/python/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=codeAnalysis
+sonar.projectKey=CodeTest
 sonar.projectBaseDir=/var/lib/jenkins/workspace/Final-Project-Jenkinsfile/cidr_convert_api/
 sonar.login=admin
 sonar.password=admin
